/*
 * Copyright 2023 The gRPC Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "madro.finances.budget.grpc";
option java_outer_classname = "BudgetProto";
option go_package = "finances/proto/budget";

package budget;

// The greeting service definition.
service BudgetService {
  // Sends a greeting
  rpc GetBudget (BudgetRequest) returns (BudgetResponse);
}

// The request message containing the user's name.
message BudgetRequest {
  int32 id = 1;
}

// The response message containing the greetings
message BudgetResponse {
  int32 id = 1;
  float amount = 2;
}
